# advisor-harness

./: .gitignore  README.md  ROADMAP.md  architecture.md  prd.md  pyproject.toml  setup.py
apps/security_questionnaire/prompts/: executor.md
apps/security_questionnaire/sample_inputs/: questionnaire_sample.csv
apps/security_questionnaire/sample_inputs/company_knowledge/: security.md
apps/security_questionnaire/workflows/: security_questionnaire.md
memory/: README.md  schema.json
policy/: post_run_review.md  routing_policy.md
tests/: test_database.py  test_evaluation.py  test_improvements.py  test_parser.py  test_release_readiness.py  test_runner.py  test_security_questionnaire.py  test_ui.py
