[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-advisor"
version = "0.1.0"
description = "Local-first multi-agent advisor harness."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
maa = "packages.harness.cli:main"

[tool.setuptools.packages.find]
include = ["packages*"]

[tool.setuptools.package-data]
"packages.verticals.release_readiness" = ["prompts/*.md", "samples/*.md", "schemas/*.json"]
